<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:padding="12dp"
    android:rowCount="6"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_requestGPS"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_size"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/green_button"
        android:text="@string/txt_permissionGPS" />

    <Button
        android:id="@+id/bt_enableGPS"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/green_button"

        android:text="@string/txt_enableGPS" />

    <Button
        android:id="@+id/bt_disableGPS"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/green_button"
        android:text="@string/txt_disableGPS" />

    <Button
        android:id="@+id/bt_startRoute"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/green_button"
        android:text="@string/txt_startRoute" />

    <Button
        android:id="@+id/bt_endRoute"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/green_button"
        android:text="@string/txt_endRoute" />

    <TextView
        android:id="@+id/label_travelledDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/travelled_distance"
        />

    <TextView
        android:id="@+id/resultaTravelledDistance"
        android:layout_width="@dimen/result_size"
        android:layout_height="@dimen/height_size2"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:background="@color/grey_box"
        android:text="@string/padrao_distance" />
    <TextView
        android:id="@+id/label_pastTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past_time"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        />

    <Chronometer
        android:id="@+id/resultPastTime"
        android:layout_width="@dimen/result_size"
        android:layout_height="@dimen/height_size2"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:background="@color/grey_box"
        />

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtinput_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/hint_search"
            android:theme="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_search"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        />
</GridLayout>
